Fix(-): fix collapsed icons

--- a/features/DashboardAside/DashboardAside.module.scss
+++ b/features/DashboardAside/DashboardAside.module.scss
@@ -26,3 +26,9 @@
         @apply text-greenQ
     }
 }
+.collapsedIcon {
+    min-width: 30px;
+    max-width: 20px;
+    height: 30px;
+    padding:  0.25rem;
+}
